# scih

./: .dockerfile  .gitignore  .sci.sh  README.md  TODO.md  pyproject.toml  wip.docker-compose.yml
src/scih/: __main__.py  app.py  hooks.py  main.py
src/scih/config/: cached_conf_reader.py  sci_pipeline.py
src/scih/model/: gitea.py
test/: test_gitea.py
tests/: conftest.py  test_gitea.py
