[build-system]
requires = ["setuptools", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "scih"
version = "0.1.0"
description = "Simple CI webhooks integration extension"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "loguru",
    "posix-ipc",
]

[project.scripts]
scih = "scih.main:main"

[project.optional-dependencies]
build = [
    "build"
]
test = [
    "pytest",
    "coverage"
]
dev = [
    "scih[build]",
    "scih[test]",
    "ruff",
    "basedpyright",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "I"
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true

[tool.basedpyright]
include = ["src"]
reportAny = false
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "Linux"
